--- a/InfoProd.html
+++ b/InfoProd.html
@@ -46,10 +46,10 @@
     </div>
 
     <div class="right-column">
-      <div class="product-title">AIR MAX 90</div>
+      <div class="product-title">Air Max 90 Iron Grey</div>
       <div class="stars">★★★★★</div>
-      <div class="old-price">DE R$ 989,89</div>
-      <div class="price">R$ 689,89</div>
+      <div class="old-price">DE R$ 699,89</div>
+      <div class="price">R$ 589,99</div>
       <div class="buttons">
         <button class="btn-comprar">COMPRAR</button>
         <div class="cart-icon">
@@ -69,6 +69,18 @@
     </div>
   </div>
 
+  <article class="sobreProd">
+    <h2>Sobre o Produto</h2>
+    <p>Nada tão legal, nada tão confortável, nada tão comprovado. O Nike Air Max 90 permanece fiel às suas raízes de
+      corrida do OG, com a emblemática sola Waffle, sobreposições costuradas e detalhes clássicos em TPU. As cores
+      clássicas celebram seu visual renovado, enquanto o amortecimento Max Air aumenta o conforto da viagem.
+
+      O Nike Air Max 90 Iron Grey, lançado em 13/03/2025 na cor cinza, já está disponível na Du.Hype. Compre com
+      confiança e garantia de originalidade!
+
+
+    </p>
+  </article>
   <script src="InfoProd.js"></script>
 </body>
 
