--- a/home.html
+++ b/home.html
@@ -139,41 +139,41 @@
     <h1 id="nikeh">NIKE</h1>
     <div class="container-produtos">
         <article class="produto">
-            <img src="Imagens/air max 90 - 2.webp" alt="Produto Nike">
-            <h2>AIR MAX 90</h2>
+            <img src="Imagens/air max 90 - 2.webp" alt="AIR MAX 90">
+            <h2>Air Max 90 Iron Grey</h2>
             <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 698,89</span>
+            <span class="preco">R$ 589,99</span>
             <a href="InfoProd.html">
                 <button>Ver mais</button>
             </a>
         </article>
 
         <article class="produto">
-            <img src="Imagens/dunk.webp" alt="Produto Adidas">
-            <h2>NIKE DUNK</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 990,00</span>
-            <a href="InfoProd.html">
+            <img src="Imagens/dunk.webp" alt="DUNK LOW COURT PURPLE">
+            <h2>Dunk Low Court Purple</h2>
+            <p>O clássico Nike SB Dunk Low ganha uma releitura ousada pelas mãos da skatista australiana Hayley Wilson.</p>
+            <span class="preco">R$ 1.589,30</span>
+            <a href="InfoProd2.html">
                 <button>Ver mais</button>
             </a>
         </article>
 
         <article class="produto">
-            <img src="Imagens/air95.webp" alt="Produto Adidas">
-            <h2>AIR MAX 95</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 699,90</span>
-            <a href="InfoProd.html">
+            <img src="Imagens/cortez-0.webp" alt="AIR MAX 95 CORTEZ">
+            <h2>Corteiz x Nike Air Max 95</h2>
+            <p>Lançado como parte do pacote ‘Rules the World’ da marca de streetwear do Reino Unido.</p>
+            <span class="preco">R$ 5.299,90</span>
+            <a href="InfoProd3.html">
                 <button>Ver mais</button>
             </a>
         </article>
 
         <article class="produto">
-            <img src="Imagens/tn.webp" alt="Produto Adidas">
-            <h2>AIR MAX PLUS</h2>
+            <img src="Imagens/tn-0.jpg" alt="AIR MAX TN">
+            <h2>Nike Air Max Plus - Voltage Purple</h2>
             <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 1.190,00</span>
-            <a href="InfoProd.html">
+            <span class="preco">R$ 1.100,00</span>
+            <a href="InfoProd4.html">
                 <button>Ver mais</button>
             </a>
         </article>
