--- a/home.html
+++ b/home.html
@@ -135,7 +135,7 @@
 
     <script src="categorias.js"></script>
 
-    <!--PRODUTOS-->
+    <!--PRODUTOS Nike-->
     <h1 id="nikeh">NIKE</h1>
     <div class="container-produtos">
         <article class="produto">
@@ -179,45 +179,45 @@
         </article>
     </div>
 
-    <!--PRODUTOS-->
+    <!--PRODUTOS Adidas-->
     <h1 id="adidash">ADIDAS</h1>
     <div class="container-produtos">
         <article class="produto">
-            <img src="Imagens/Scarrossel1.png" alt="Produto Nike">
-            <h2>CAMPUS</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 158,90</span>
-            <a href="PAberto">
+            <img src="Imagens/campus-0.webp" alt="Produto Nike">
+            <h2>Campus 00s Grey Three Carbon</h2>
+            <p>Modelo icônico original com materiais, cores e proporções modernas.</p>
+            <span class="preco">R$ 750,00</span>
+            <a href="InfoProdAd.html">
                 <button>Ver mais</button>
             </a>
         </article>
 
         <article class="produto">
-            <img src="Imagens/Scarrossel1.png" alt="Produto Adidas">
-            <h2>CAMPUS 2</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
+            <img src="Imagens/thieves-0.webp" alt="Produto Adidas">
+            <h2>100 Thieves x adidas Savage</h2>
+            <p>O mais recente lançamento da collab adidas x 100 Thieves questiona o significado de explorar em 2025.</p>
             <span class="preco">R$ 149,90</span>
-            <a href="PAberto">
+            <a href="InfoProdAd2.html">
                 <button>Ver mais</button>
             </a>
         </article>
 
         <article class="produto">
-            <img src="Imagens/Scarrossel1.png" alt="Produto Adidas">
-            <h2>CAMPUS 3</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 149,90</span>
-            <a href="PAberto">
+            <img src="Imagens/A3-0.webp" alt="Produto Adidas">
+            <h2>Y-3 x adidas A3</h2>
+            <p>Viaje de volta ao ano de 2002 com o Y-3 A3 Control. Esta reedição de um par de tênis clássicos.</p>
+            <span class="preco">R$ 2.799,99</span>
+            <a href="InfoProdAd3.html">
                 <button>Ver mais</button>
             </a>
         </article>
 
         <article class="produto">
-            <img src="Imagens/Scarrossel1.png" alt="Produto Adidas">
+            <img src="Imagens/Ultraboost-0.webp" alt="Produto Adidas">
             <h2>CAMPUS 4</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
-            <span class="preco">R$ 149,90</span>
-            <a href="PAberto">
+            <p>O único tênis de corrida de alto desempenho que também conquistou o mundo da moda.</p>
+            <span class="preco">R$ 600,00</span>
+            <a href="InfoProdAd4.html">
                 <button>Ver mais</button>
             </a>
         </article>
