--- a/home.html
+++ b/home.html
@@ -223,6 +223,51 @@
         </article>
     </div>
 
+    <!--PRODUTOS ASICS-->
+    <h1 id="asicsh">ASICS</h1>
+    <div class="container-produtos">
+        <article class="produto">
+            <img src="Imagens/asicsgel4.webp" alt="Produto Asics">
+            <h2>Asics Gel-NYC Midnight</h2>
+            <p>O tênis GEL-NYC tem inspiração em estilos de corrida de desempenho tradicionais e modernos.</p>
+            <span class="preco">R$ 750,00</span>
+            <a href="InfoProdASICS.html">
+                <button>Ver mais</button>
+            </a>
+        </article>
+
+        <article class="produto">
+            <img src="Imagens/asicsgt2160.webp" alt="Produto Asics">
+            <h2>Asics GT-2160 Pure Silver White</h2>
+            <p>O GT-2160™ é uma homenagem à linguagem de design técnica da série GT-2000™ no começo de 2010.</p>
+            <span class="preco">R$ 719,90</span>
+            <a href="InfoProdASICS2.html">
+                <button>Ver mais</button>
+            </a>
+        </article>
+
+        <article class="produto">
+            <img src="Imagens/kayano14.webp" alt="Produto Asics">
+            <h2>Asics Gel-Kayano 14 White Fjord Grey</h2>
+            <p>O tênis GEL-KAYANO™ 14 ressurge com sua estética do final dos anos 2000 como uma homenagem à nossa famosa série GEL-KAYANO™.</p>
+            <span class="preco">R$ 1.050,00</span>
+            <a href="InfoProdASICS3.html">
+                <button>Ver mais</button>
+            </a>
+        </article>
+
+        <article class="produto">
+            <img src="Imagens/1130.webp" alt="Produto Asics">
+            <h2>Asics Gel-1130 White Rainy Lake</h2>
+            <p>Abrangendo décadas de evolução de design, o tênis GEL-1130™ presta homenagem à nona iteração da série GEL-1000™.</p>
+            <span class="preco">R$ 1030,00</span>
+            <a href="InfoProdASICS4.html">
+                <button>Ver mais</button>
+            </a>
+        </article>
+    </div>
+
+
 
 
 
