--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <section class="background">
-        <div class="card" style="background-image: url(Imagens/shoe1.png);">
-            <a href="marcas.html" class="card-link">MARCAS</a>
-        </div>
-        <div class="card home" style="background-image: url(Imagens/shoe2.png);">
-            <a href="home.html" class="card-link">HOME</a>
-        </div>
-        <div class="card" style="background-image: url(Imagens/shoe3.png);">
-            <a href="contato.html" class="card-link">CONTATO</a>
-        </div>
+        <a href="marcas.html" class="card" style="background-image: url(Imagens/shoe1.png);">
+            <span class="card-link">MARCAS</span>
+        </a>
+        <a href="home.html" class="card home" style="background-image: url(Imagens/shoe2.png);">
+            <span class="card-link">HOME</span>
+        </a>
+        <a href="contato.html" class="card" style="background-image: url(Imagens/shoe3.png);">
+            <span class="card-link">CONTATO</span>
+        </a>
     </section>
 
     <body>
