--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="home.html">HOME</a></li>
-            <li><a href="">MARCAS</a></li>
+            <li><a href="marcas.html">MARCAS</a></li>
             <li><a href="">CONTATO</a></li>
         </ul>
         <div class="search-box">
@@ -214,7 +214,7 @@
 
         <article class="produto">
             <img src="Imagens/Ultraboost-0.jpg" alt="Produto Adidas">
-            <h2>CAMPUS 4</h2>
+            <h2>Ultraboost 5 DNA Core Black</h2>
             <p>O único tênis de corrida de alto desempenho que também conquistou o mundo da moda.</p>
             <span class="preco">R$ 600,00</span>
             <a href="InfoProdAd4.html">
@@ -223,7 +223,7 @@
         </article>
     </div>
 
-    <!--PRODUTOS ASICS-->
+        <!--PRODUTOS ASICS-->
     <h1 id="asicsh">ASICS</h1>
     <div class="container-produtos">
         <article class="produto">
@@ -267,12 +267,41 @@
         </article>
     </div>
 
-
-
-
-
-
-
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <img src="Imagens/DU.HYPE logo.png" alt="DU.HYPE Logo" class="footer-logo">
+                <p>
+                    A <strong>DU.HYPE</strong> é referência nacional em sneakers e streetwear, trazendo as melhores marcas e lançamentos exclusivos para você. Nosso compromisso é oferecer autenticidade, qualidade e atendimento diferenciado para apaixonados por estilo.
+                </p>
+            </div>
+            <div class="footer-links">
+                <h4>Institucional</h4>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="marcas.html">Marcas</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Trocas e Devoluções</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Redes Sociais</h4>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <p class="footer-contact">
+                    <i class="fas fa-envelope"></i> contato@duhype.com.br<br>
+                    <i class="fas fa-phone"></i> (11) 99999-9999
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 DU.HYPE. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
