--- a/home.html
+++ b/home.html
@@ -276,14 +276,16 @@
                 </p>
             </div>
             <div class="footer-links">
-                <h4>Institucional</h4>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="marcas.html">Marcas</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Política de Privacidade</a></li>
-                    <li><a href="#">Trocas e Devoluções</a></li>
-                </ul>
+                <div class="menus">
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="marcas.html">Marcas</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#">Política de Privacidade</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="footer-social">
                 <h4>Redes Sociais</h4>
