--- a/home.html
+++ b/home.html
@@ -276,16 +276,14 @@
                 </p>
             </div>
             <div class="footer-links">
-                <div class="menus">
-                    <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="marcas.html">Marcas</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">Contato</a></li>
-                        <li><a href="#">Política de Privacidade</a></li>
-                    </ul>
-                </div>
+                <h4>Institucional</h4>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="marcas.html">Marcas</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Trocas e Devoluções</a></li>
+                </ul>
             </div>
             <div class="footer-social">
                 <h4>Redes Sociais</h4>
