--- a/InfoProd.html
+++ b/InfoProd.html
@@ -60,10 +60,18 @@
       <div class="semelhantes">
         <h4>PRODUTOS SEMELHANTES</h4>
         <div class="semelhantes-container">
-          <div class="semelhante-item"><img src="imagens/af1.jpg" alt="Produto 1"></div>
-          <div class="semelhante-item"><img src="imagens/tn.jpg" alt="Produto 2"></div>
-          <div class="semelhante-item"><img src="imagens/dunk.jpg" alt="Produto 3"></div>
-          <div class="semelhante-item"><img src="imagens/j11.jpg" alt="Produto 4"></div>
+          <a class="semelhante-item" href="InfoProdAd2.html">
+            <img src="Imagens/thieves-0.jpg" alt="Air Force 1">
+          </a>
+          <a class="semelhante-item" href="InfoProd3.html">
+            <img src="Imagens/corteiz-0.jpg" alt="Nike TN">
+          </a>
+          <a class="semelhante-item" href="InfoProd4.html">
+            <img src="imagens/tn-0.jpg" alt="Nike Dunk">
+          </a>
+          <a class="semelhante-item" href="InfoProdAd4.html">
+            <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+          </a>
         </div>
       </div>
     </div>
