--- a/InfoProd3.html
+++ b/InfoProd3.html
@@ -57,17 +57,26 @@
         </div>
       </div>
 
-      <div class="semelhantes">
+       <div class="semelhantes">
         <h4>PRODUTOS SEMELHANTES</h4>
         <div class="semelhantes-container">
-          <div class="semelhante-item"><img src="imagens" alt="Produto 1"></div>
-          <div class="semelhante-item"><img src="imagens" alt="Produto 2"></div>
-          <div class="semelhante-item"><img src="imagens" alt="Produto 3"></div>
-          <div class="semelhante-item"><img src="imagens" alt="Produto 4"></div>
+          <a class="semelhante-item" href="InfoProdAd2.html">
+            <img src="Imagens/thieves-0.jpg" alt="Air Force 1">
+          </a>
+          <a class="semelhante-item" href="InfoProd2.html">
+            <img src="Imagens/dunk-0.jpg" alt="Nike TN">
+          </a>
+          <a class="semelhante-item" href="InfoProd4.html">
+            <img src="imagens/tn-0.jpg" alt="Nike Dunk">
+          </a>
+          <a class="semelhante-item" href="InfoProdAd4.html">
+            <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+          </a>
         </div>
       </div>
     </div>
   </div>
+
   <article class="sobreProd">
     <h2>Sobre o Produto</h2>
     <p>Lançado como parte do pacote ‘Rules the World’ da marca de streetwear do Reino Unido, o Corteiz x Nike Air Max 95
