--- a/InfoProdAd.html
+++ b/InfoProdAd.html
@@ -60,10 +60,18 @@
       <div class="semelhantes">
         <h4>PRODUTOS SEMELHANTES</h4>
         <div class="semelhantes-container">
-          <div class="semelhante-item"><img src="imagens/af1.webp" alt="Produto 1"></div>
-          <div class="semelhante-item"><img src="imagens/tn.webp" alt="Produto 2"></div>
-          <div class="semelhante-item"><img src="imagens/dunk.webp" alt="Produto 3"></div>
-          <div class="semelhante-item"><img src="imagens/j11.webp" alt="Produto 4"></div>
+          <a class="semelhante-item" href="InfoProdAd2.html">
+            <img src="Imagens/thieves-0.jpg" alt="Air Force 1">
+          </a>
+          <a class="semelhante-item" href="InfoProd3.html">
+            <img src="Imagens/corteiz-0.jpg" alt="Nike TN">
+          </a>
+          <a class="semelhante-item" href="InfoProd.html">
+            <img src="imagens/air max 90 - 2.jpg" alt="Nike Dunk">
+          </a>
+          <a class="semelhante-item" href="InfoProdAd4.html">
+            <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+          </a>
         </div>
       </div>
     </div>
@@ -71,9 +79,13 @@
 
   <article class="sobreProd">
     <h2>Sobre o Produto</h2>
-    <p>Depois de conquistar as quadras, o tênis adidas Campus não demorou muito para ser adotado fora delas também. Esta versão transforma o modelo icônico original com materiais, cores e proporções modernas. Possui cabedal em couro premium forrado com moletinho macio, tudo isso sobre uma entressola off-white, uma conexão clara com o legado do Campus.
+    <p>Depois de conquistar as quadras, o tênis adidas Campus não demorou muito para ser adotado fora delas também. Esta
+      versão transforma o modelo icônico original com materiais, cores e proporções modernas. Possui cabedal em couro
+      premium forrado com moletinho macio, tudo isso sobre uma entressola off-white, uma conexão clara com o legado do
+      Campus.
 
-O adidas Campus 00s Grey Three Carbon Off White, lançado em 03/06/2025 na cor cinza, já está disponível na Du.Hype. Compre com confiança e garantia de originalidade!
+      O adidas Campus 00s Grey Three Carbon Off White, lançado em 03/06/2025 na cor cinza, já está disponível na
+      Du.Hype. Compre com confiança e garantia de originalidade!
     </p>
   </article>
   <script src="InfoProdAd.js"></script>
