--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
         <ul class="nav-links">
             <li><a href="home.html">HOME</a></li>
             <li><a href="marcas.html">MARCAS</a></li>
-            <li><a href="">CONTATO</a></li>
+            <li><a href="contato.html">CONTATO</a></li>
         </ul>
         <div class="search-box">
             <input type="text" placeholder="🔎">
@@ -141,7 +141,7 @@
         <article class="produto">
             <img src="Imagens/air max 90 - 2.jpg" alt="AIR MAX 90">
             <h2>Air Max 90 Iron Grey</h2>
-            <p>Produto de alta qualidade, conforto e um design incrível.</p>
+            <p>O Nike Air Max 90 permanece fiel às suas raízes de corrida do OG</p>
             <span class="preco">R$ 589,99</span>
             <a href="InfoProd.html">
                 <button>Ver mais</button>
