--- a/InfoProd4.html
+++ b/InfoProd4.html
@@ -60,14 +60,23 @@
             <div class="semelhantes">
                 <h4>PRODUTOS SEMELHANTES</h4>
                 <div class="semelhantes-container">
-                    <div class="semelhante-item"><img src="imagens" alt="Produto 1"></div>
-                    <div class="semelhante-item"><img src="imagens" alt="Produto 2"></div>
-                    <div class="semelhante-item"><img src="imagens" alt="Produto 3"></div>
-                    <div class="semelhante-item"><img src="imagens" alt="Produto 4"></div>
+                    <a class="semelhante-item" href="InfoProdAd2.html">
+                        <img src="Imagens/thieves-0.jpg" alt="Air Force 1">
+                    </a>
+                    <a class="semelhante-item" href="InfoProd3.html">
+                        <img src="Imagens/corteiz-0.jpg" alt="Nike TN">
+                    </a>
+                    <a class="semelhante-item" href="InfoProd2.html">
+                        <img src="imagens/dunk-0.jpg" alt="Nike Dunk">
+                    </a>
+                    <a class="semelhante-item" href="InfoProdAd4.html">
+                        <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+
     <article class="sobreProd">
         <h2>Sobre o Produto</h2>
         <p>O couro sintético combina com malha e malha arejada para proporcionar durabilidade, suporte e
