--- a/InfoProdAd2.html
+++ b/InfoProdAd2.html
@@ -34,17 +34,13 @@
                 <span class="arrow right" onclick="trocarImagem(1)">›</span>
             </div>
             <div class="thumbnail-row">
-                <div class="thumbnail"><img src="imagens/thieves-2.jpg" alt="Miniatura 1"
-                        onclick="selecionarImagem(0)">
+                <div class="thumbnail"><img src="imagens/thieves-2.jpg" alt="Miniatura 1" onclick="selecionarImagem(0)">
                 </div>
-                <div class="thumbnail"><img src="imagens/thieves-3.jpg" alt="Miniatura 2"
-                        onclick="selecionarImagem(1)">
+                <div class="thumbnail"><img src="imagens/thieves-3.jpg" alt="Miniatura 2" onclick="selecionarImagem(1)">
                 </div>
-                <div class="thumbnail"><img src="imagens/thieves-4.jpg" alt="Miniatura 3"
-                        onclick="selecionarImagem(2)">
+                <div class="thumbnail"><img src="imagens/thieves-4.jpg" alt="Miniatura 3" onclick="selecionarImagem(2)">
                 </div>
-                <div class="thumbnail"><img src="imagens/thieves-5.jpg" alt="Miniatura 4"
-                        onclick="selecionarImagem(3)">
+                <div class="thumbnail"><img src="imagens/thieves-5.jpg" alt="Miniatura 4" onclick="selecionarImagem(3)">
                 </div>
             </div>
         </div>
@@ -64,10 +60,18 @@
             <div class="semelhantes">
                 <h4>PRODUTOS SEMELHANTES</h4>
                 <div class="semelhantes-container">
-                    <div class="semelhante-item"><img src="imagens/af1.webp" alt="Produto 1"></div>
-                    <div class="semelhante-item"><img src="imagens/tn.webp" alt="Produto 2"></div>
-                    <div class="semelhante-item"><img src="imagens/dunk.webp" alt="Produto 3"></div>
-                    <div class="semelhante-item"><img src="imagens/j11.webp" alt="Produto 4"></div>
+                    <a class="semelhante-item" href="InfoProd.html">
+                        <img src="Imagens/air max 90 - 2.jpg" alt="Air Force 1">
+                    </a>
+                    <a class="semelhante-item" href="InfoProd3.html">
+                        <img src="Imagens/corteiz-0.jpg" alt="Nike TN">
+                    </a>
+                    <a class="semelhante-item" href="InfoProd4.html">
+                        <img src="imagens/tn-0.jpg" alt="Nike Dunk">
+                    </a>
+                    <a class="semelhante-item" href="InfoProdAd4.html">
+                        <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+                    </a>
                 </div>
             </div>
         </div>
