--- a/InfoProdAd3.html
+++ b/InfoProdAd3.html
@@ -57,17 +57,25 @@
                 </div>
             </div>
 
-            <div class="semelhantes">
-                <h4>PRODUTOS SEMELHANTES</h4>
-                <div class="semelhantes-container">
-                    <div class="semelhante-item"><img src="imagens/af1.webp" alt="Produto 1"></div>
-                    <div class="semelhante-item"><img src="imagens/tn.webp" alt="Produto 2"></div>
-                    <div class="semelhante-item"><img src="imagens/dunk.webp" alt="Produto 3"></div>
-                    <div class="semelhante-item"><img src="imagens/j11.webp" alt="Produto 4"></div>
-                </div>
-            </div>
+             <div class="semelhantes">
+        <h4>PRODUTOS SEMELHANTES</h4>
+        <div class="semelhantes-container">
+          <a class="semelhante-item" href="InfoProdAd2.html">
+            <img src="Imagens/thieves-0.jpg" alt="Air Force 1">
+          </a>
+          <a class="semelhante-item" href="InfoProd3.html">
+            <img src="Imagens/corteiz-0.jpg" alt="Nike TN">
+          </a>
+          <a class="semelhante-item" href="InfoProd4.html">
+            <img src="imagens/tn-0.jpg" alt="Nike Dunk">
+          </a>
+          <a class="semelhante-item" href="InfoProdAd4.html">
+            <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+          </a>
         </div>
+      </div>
     </div>
+  </div>
 
     <article class="sobreProd">
         <h2>Sobre o Produto</h2>
