--- a/InfoProdASICS.html
+++ b/InfoProdASICS.html
@@ -18,7 +18,7 @@
     <ul class="nav-links">
       <li><a href="home.html">HOME</a></li>
       <li><a href="marcas.html">MARCAS</a></li>
-      <li><a href="">CONTATO</a></li>
+      <li><a href="contato.html">CONTATO</a></li>
     </ul>
     <div class="search-box">
       <input type="text" placeholder="🔎">
@@ -30,17 +30,17 @@
     <div class="left-column">
       <div class="main-image-box">
         <span class="arrow left" onclick="trocarImagem(-1)">‹</span>
-        <img id="main-image" src="imagens/asicsgel.webp" alt="Imagem do Tênis">
+        <img id="main-image" src="imagens/34.jpg" alt="Imagem do Tênis">
         <span class="arrow right" onclick="trocarImagem(1)">›</span>
       </div>
       <div class="thumbnail-row">
-        <div class="thumbnail"><img src="imagens/asicsgel2.webp" alt="Miniatura 1" onclick="selecionarImagem(0)">
+        <div class="thumbnail"><img src="imagens/37.jpg" alt="Miniatura 1" onclick="selecionarImagem(0)">
         </div>
-        <div class="thumbnail"><img src="imagens/asicsgel3.webp" alt="Miniatura 2" onclick="selecionarImagem(1)">
+        <div class="thumbnail"><img src="imagens/36.jpg" alt="Miniatura 2" onclick="selecionarImagem(1)">
         </div>
-        <div class="thumbnail"><img src="imagens/asicsgel4.webp" alt="Miniatura 3" onclick="selecionarImagem(2)">
+        <div class="thumbnail"><img src="imagens/35.jpg" alt="Miniatura 3" onclick="selecionarImagem(2)">
         </div>
-        <div class="thumbnail"><img src="imagens/asicsgel5.webp" alt="Miniatura 4" onclick="selecionarImagem(3)">
+        <div class="thumbnail"><img src="imagens/38.jpg" alt="Miniatura 4" onclick="selecionarImagem(3)">
         </div>
       </div>
     </div>
@@ -57,13 +57,21 @@
         </div>
       </div>
 
-      <div class="semelhantes">
+<div class="semelhantes">
         <h4>PRODUTOS SEMELHANTES</h4>
         <div class="semelhantes-container">
-          <div class="semelhante-item"><img src="imagens/af1.webp" alt="Produto 1"></div>
-          <div class="semelhante-item"><img src="imagens/tn.webp" alt="Produto 2"></div>
-          <div class="semelhante-item"><img src="imagens/dunk.webp" alt="Produto 3"></div>
-          <div class="semelhante-item"><img src="imagens/j11.webp" alt="Produto 4"></div>
+          <a class="semelhante-item" href="InfoProdAd2.html">
+            <img src="Imagens/thieves-0.jpg" alt="Air Force 1">
+          </a>
+          <a class="semelhante-item" href="InfoProd3.html">
+            <img src="Imagens/corteiz-0.jpg" alt="Nike TN">
+          </a>
+          <a class="semelhante-item" href="InfoProd4.html">
+            <img src="imagens/tn-0.jpg" alt="Nike Dunk">
+          </a>
+          <a class="semelhante-item" href="InfoProdAd4.html">
+            <img src="imagens/Ultraboost-0.jpg" alt="Jordan 11">
+          </a>
         </div>
       </div>
     </div>
