--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,15 @@
                 <h2>Nossa loja física</h2>
                 <p>Venha nos visitar ou entre em contato pelos canais abaixo:</p>
                 <div class="map-placeholder">
-                    <img src="Imagens/mapa-loja.png" alt="Mapa da localização da DU.Hype">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6145.463727442083!2d-46.69792279369903!3d-23.671859579226666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5036539648d5%3A0x78501a72680ea23a!2sCentro%20Universit%C3%A1rio%20Senac%20-%20Santo%20Amaro!5e0!3m2!1spt-BR!2sbr!4v1749852535323!5m2!1spt-BR!2sbr" 
+                        width="100%" 
+                        height="300" 
+                        style="border:0; border-radius:12px;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
                 <div class="business-hours">
                     <h3>Horário de Funcionamento</h3>
@@ -97,4 +105,39 @@
     </main>
 
 </body>
+<footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <img src="Imagens/DU.HYPE logo.png" alt="DU.HYPE Logo" class="footer-logo">
+                <p>
+                    A <strong>DU.HYPE</strong> é referência nacional em sneakers e streetwear, trazendo as melhores marcas e lançamentos exclusivos para você. Nosso compromisso é oferecer autenticidade, qualidade e atendimento diferenciado para apaixonados por estilo.
+                </p>
+            </div>
+            <div class="footer-links">
+                <h4>Institucional</h4>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="marcas.html">Marcas</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Trocas e Devoluções</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Redes Sociais</h4>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <p class="footer-contact">
+                    <i class="fas fa-envelope"></i> contato@duhype.com.br<br>
+                    <i class="fas fa-phone"></i> (11) 99999-9999
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 DU.HYPE. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </html>
