--- a/home.html
+++ b/home.html
@@ -227,7 +227,7 @@
     <h1 id="asicsh">ASICS</h1>
     <div class="container-produtos">
         <article class="produto">
-            <img src="Imagens/asicsgel4.webp" alt="Produto Asics">
+            <img src="Imagens/37.jpg" alt="Produto Asics">
             <h2>Asics Gel-NYC Midnight</h2>
             <p>O tênis GEL-NYC tem inspiração em estilos de corrida de desempenho tradicionais e modernos.</p>
             <span class="preco">R$ 750,00</span>
@@ -237,7 +237,7 @@
         </article>
 
         <article class="produto">
-            <img src="Imagens/asicsgt2160.webp" alt="Produto Asics">
+            <img src="Imagens/30.jpg" alt="Produto Asics">
             <h2>Asics GT-2160 Pure Silver White</h2>
             <p>O GT-2160™ é uma homenagem à linguagem de design técnica da série GT-2000™ no começo de 2010.</p>
             <span class="preco">R$ 719,90</span>
@@ -247,7 +247,7 @@
         </article>
 
         <article class="produto">
-            <img src="Imagens/kayano14.webp" alt="Produto Asics">
+            <img src="Imagens/27.jpg" alt="Produto Asics">
             <h2>Asics Gel-Kayano 14 White Fjord Grey</h2>
             <p>O tênis GEL-KAYANO™ 14 ressurge com sua estética do final dos anos 2000 como uma homenagem à nossa famosa série GEL-KAYANO™.</p>
             <span class="preco">R$ 1.050,00</span>
@@ -257,7 +257,7 @@
         </article>
 
         <article class="produto">
-            <img src="Imagens/1130.webp" alt="Produto Asics">
+            <img src="Imagens/20.jpg" alt="Produto Asics">
             <h2>Asics Gel-1130 White Rainy Lake</h2>
             <p>Abrangendo décadas de evolução de design, o tênis GEL-1130™ presta homenagem à nona iteração da série GEL-1000™.</p>
             <span class="preco">R$ 1030,00</span>
@@ -280,7 +280,7 @@
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="marcas.html">Marcas</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                     <li><a href="#">Política de Privacidade</a></li>
                     <li><a href="#">Trocas e Devoluções</a></li>
                 </ul>
