--- a/marcas.html
+++ b/marcas.html
@@ -75,6 +75,42 @@
     </div>
   </main>
 
+  <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <img src="Imagens/DU.HYPE logo.png" alt="DU.HYPE Logo" class="footer-logo">
+                <p>
+                    A <strong>DU.HYPE</strong> é referência nacional em sneakers e streetwear, trazendo as melhores marcas e lançamentos exclusivos para você. Nosso compromisso é oferecer autenticidade, qualidade e atendimento diferenciado para apaixonados por estilo.
+                </p>
+            </div>
+            <div class="footer-links">
+                <h4>Institucional</h4>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="marcas.html">Marcas</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Trocas e Devoluções</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Redes Sociais</h4>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <p class="footer-contact">
+                    <i class="fas fa-envelope"></i> contato@duhype.com.br<br>
+                    <i class="fas fa-phone"></i> (11) 99999-9999
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 DU.HYPE. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
   <script>
     // O seu script JS para a busca continua o mesmo
     function filterBrands() {
