--- a/InfoProd3.html
+++ b/InfoProd3.html
@@ -17,8 +17,8 @@
     </div>
     <ul class="nav-links">
       <li><a href="home.html">HOME</a></li>
-      <li><a href="">MARCAS</a></li>
-      <li><a href="">CONTATO</a></li>
+      <li><a href="marcas.html">MARCAS</a></li>
+      <li><a href="contato.html">CONTATO</a></li>
     </ul>
     <div class="search-box">
       <input type="text" placeholder="🔎">
