--- a/InfoProdAd2.html
+++ b/InfoProdAd2.html
@@ -16,10 +16,10 @@
             </a>
         </div>
         <ul class="nav-links">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="">MARCAS</a></li>
-            <li><a href="">CONTATO</a></li>
-        </ul>
+      <li><a href="home.html">HOME</a></li>
+      <li><a href="marcas.html">MARCAS</a></li>
+      <li><a href="contato.html">CONTATO</a></li>
+    </ul>
         <div class="search-box">
             <input type="text" placeholder="🔎">
         </div>
